refac(doc): #3423.22 fix-descriptions-keywords
- Descriptions were shortened and keywords were added on some pages.


Former-commit-id: b8dce7d07e8d2c4f8963b16e2b8231de2249f3de

--- a/new/content/pages/use-cases/continuous-hacking/critical-info/index.adoc
+++ b/new/content/pages/use-cases/continuous-hacking/critical-info/index.adoc
@@ -1,6 +1,6 @@
 :slug: use-cases/continuous-hacking/critical-info/
-:description: In this page we describe our Continuous Hacking service, which aims to detect and report all the vulnerabilities in your application as soon as possible. Our participation in the development life cycle allow us to continuously detect security findings in a development environment.
-:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security.
+:description: The extraction and collection of data from your tested systems enrich Fluid Attacks' hacking service. However, your admin can decide to delete it at any time.
+:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security, Information
 :category: continuous-hacking
 :section: Continuous Hacking
 :template: use-cases/feature
