--- a/new/content/pages/use-cases/continuous-hacking/environments/index.adoc
+++ b/new/content/pages/use-cases/continuous-hacking/environments/index.adoc
@@ -1,6 +1,6 @@
 :slug: use-cases/continuous-hacking/environments/
-:description: In this page we describe our Continuous Hacking service, which aims to detect and report all the vulnerabilities in your application as soon as possible. Our participation in the development life cycle allow us to continuously detect security findings in a development environment.
-:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security.
+:description: Within a project with Fluid Attacks, you can choose the environments on which to work, and you can be aware of the severity of every hacking process.
+:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security, Information, Severity, Environment
 :nextpage: use-cases/continuous-hacking/vuln-manage/
 :category: continuous-hacking
 :section: Continuous Hacking
