--- a/new/content/pages/use-cases/continuous-hacking/hacking-tech/index.adoc
+++ b/new/content/pages/use-cases/continuous-hacking/hacking-tech/index.adoc
@@ -1,6 +1,6 @@
 :slug: use-cases/continuous-hacking/hacking-tech/
-:description: In this page we describe our Continuous Hacking service, which aims to detect and report all the vulnerabilities in your application as soon as possible. Our participation in the development life cycle allow us to continuously detect security findings in a development environment.
-:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security.
+:description: The Fluid Attacks team's continuous and ethical hacking involves automatic and manual testing of the infrastructure, applications, and source code.
+:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Security, Vulnerabilities, Pentesting
 :nextpage: use-cases/continuous-hacking/healthcheck/
 :category: continuous-hacking
 :section: Continuous Hacking
