--- a/new/content/pages/use-cases/continuous-hacking/vuln-manage/index.adoc
+++ b/new/content/pages/use-cases/continuous-hacking/vuln-manage/index.adoc
@@ -1,6 +1,6 @@
 :slug: use-cases/continuous-hacking/vuln-manage/
-:description: In this page we describe our Continuous Hacking service, which aims to detect and report all the vulnerabilities in your application as soon as possible. Our participation in the development life cycle allow us to continuously detect security findings in a development environment.
-:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security.
+:description: Check the overall data and remediation status of each finding, and the project progress in real-time with Integrates, our Vulnerability Management Platform.
+:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security, Integrates, Vulnerability, Remediation
 :nextpage: use-cases/continuous-hacking/mock-attacks/
 :category: continuous-hacking
 :section: Continuous Hacking
