--- a/new/content/pages/use-cases/one-shot-hacking/critical-info/index.adoc
+++ b/new/content/pages/use-cases/one-shot-hacking/critical-info/index.adoc
@@ -1,6 +1,6 @@
 :slug: use-cases/one-shot-hacking/critical-info/
-:description: In this page we present our One Shot Hacking service, which aims to detect and report all vulnerabilities and security issues within your application. The rigorous inspection of our team allow us to detect all existing security findings with no false positives.
-:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security.
+:description: Extracting and gathering data from your tested system enriches the Fluid Attacks ethical hacking, but your admin has the option of removing such information.
+:keywords: Fluid Attacks, Services, Ethical Hacking, Pentesting, Security, Information
 :category: one-shot-hacking
 :section: One-Shot Hacking
 :template: use-cases/feature
