--- a/new/content/pages/use-cases/one-shot-hacking/vuln-manage/index.adoc
+++ b/new/content/pages/use-cases/one-shot-hacking/vuln-manage/index.adoc
@@ -1,6 +1,6 @@
 :slug: use-cases/one-shot-hacking/vuln-manage/
-:description: In this page we present our One Shot Hacking service, which aims to detect and report all vulnerabilities and security issues within your application. The rigorous inspection of our team allow us to detect all existing security findings with no false positives.
-:keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security.
+:description: You can see the progress of the project, and the overall data and remediation status of each finding using Integrates, our Vulnerability Management Platform.
+:keywords: Fluid Attacks, Services, Ethical Hacking, Pentesting, Security, Information, Vulnerability, Remediation
 :nextpage: use-cases/one-shot-hacking/coverage/
 :category: one-shot-hacking
 :section: One-Shot Hacking
