feat(doc): #2994.213 add refs to some rules
- Added ASVS references to R037 and R043
- Added CWE references to R037 and R043
- Added content to some old references
- Updated old ASVS references in R037, R043
- Removed old references with broken links
- Updated R037, R043 keywords
- Fixed some minor typos and grammar issues


Former-commit-id: 269b8a57f7fc019780853475d449e0be19b6c0c1

--- a/content/pages/rules/files/037/index.adoc
+++ b/content/pages/rules/files/037/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/037/
 :category: files
 :description: This requirement establishes the importance of discarding potentially harmful data inputs in parameters to avoid code injections and data leakage.
-:keywords: Requirement, Security, Path, Directory, Parameter, File, Rules, Ethical Hacking, Pentesting
+:keywords: Path, Directory, Parameter, File, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R037. Parameters without sensitive data
@@ -22,32 +22,31 @@ and compromise sensitive information.
 == Implementation
 
 It must be assumed that all data inputs are malicious,
-thus using the white list method
+therefore, whitelisting and escaping should be used
 to discard any type of data input that is not acceptable
 (strictly complies with the specifications)
-and rejects anything else
-or modify it to meet the specifications.
+or sanitize it.
 
 == Attacks
 
 . An attacker may create or overwrite critical files
-used to execute code, as programs or libraries.
-If the target file is used as security mechanism,
+used to execute code, such as programs or libraries.
+If the target file is used as a security mechanism,
 then the attacker may surpass that mechanism.
 For example, by adding a new account at the end of a password file
 to bypass the authentication process.
 
 . An attacker may read the content of unexpected files
 and expose sensitive information.
-If the target file is used as security mechanism,
+If the target file is used as a security mechanism,
 then the attacker may surpass that mechanism.
-For example, by reading a password file
+For example, by reading a password file,
 the attacker may perform a brute force attack
-to obtain the users credentials.
+to obtain valid user credentials.
 
 . The attacker may overwrite, delete or corrupt critical files
 such as programs, libraries, or sensitive information.
-This may lead to a system malfunction,
+This may lead to a system failure,
 and in case of having authentication mechanisms,
 the attacker may block the system access to all users.
 
@@ -65,21 +64,77 @@ the attacker may block the system access to all users.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/22.html[CWE-22: Improper Limitation of a Pathname to a Restricted Directory].
+. [[r1]] link:https://cwe.mitre.org/data/definitions/22.html[CWE-22: Improper Limitation of a Pathname to a Restricted Directory
+('Path traversal')].
+The software uses external input to construct a pathname that is intended to
+identify a file or directory that is located underneath a restricted parent
+directory,
+but the software does not properly neutralize special elements within the
+pathname that can cause the pathname to resolve to a location that is outside
+of the restricted directory.
 
 . [[r2]] link:https://cwe.mitre.org/data/definitions/23.html[CWE-23: Relative Path Traversal].
+The software uses external input to construct a pathname that should be within
+a restricted directory,
+but it does not properly neutralize sequences such as ""**..**" that can resolve
+to a location that is outside of that directory.
 
 . [[r3]] link:https://cwe.mitre.org/data/definitions/36.html[CWE-36: Absolute Path Traversal].
+The software uses external input to construct a pathname that should be within
+a restricted directory,
+but it does not properly neutralize absolute path sequences such as
+**"/abs/path"** that can resolve to a location that is outside of that
+directory.
 
-. [[r4]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[+OWASP-ASVS v3.1-5.13+]
-Verify that the application is not susceptible
-to Remote File Inclusion (+RFI+) or Local File Inclusion (+LFI+)
-when content is used that is a path to a file.
+. [[r4]] link:https://cwe.mitre.org/data/definitions/73.html[CWE-73: External Control of File Name or Path].
+The software allows user input to control or influence paths or file names that
+are used in filesystem operations.
 
-. [[r5]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[+OWASP-ASVS v3.1-5.14+]
-Verify that the application is not susceptible
-to +XPath+ injection or +XML+ injection attacks.
+. [[r5]] link:https://cwe.mitre.org/data/definitions/98.html[CWE-98: PHP Remote File Inclusion].
+The PHP application receives input from an upstream component,
+but it does not restrict or incorrectly restricts the input before its usage in
+"**require**," "**include**," or similar functions.
 
-. [[r6]] link:https://www.owasp.org/index.php/Path_Traversal[Path Traversal].
+. [[r6]] link:https://cwe.mitre.org/data/definitions/641.html[CWE-641: Improper Restriction of Names for Files and Other Resources].
+The application constructs the name of a file or other resource using input
+from an upstream component,
+but it does not restrict or incorrectly restricts the resulting name.
 
-. [[r7]] link:https://www.owasp.org/index.php/Testing_Directory_traversal/file_include_(OTG-AUTHZ-001)[Testing Directory traversal/file include (OTG-AUTHZ-001)].
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.3 Output encoding and Injection Prevention Requirements.(5.3.9)]
+Verify that the application protects against Local File Inclusion (*LFI*) or
+Remote File Inclusion (*RFI*) attacks.
+
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.3 Output encoding and Injection Prevention Requirements.(5.3.10)]
+Verify that the application protects against *XPath* injection or *XML*
+injection attacks.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.3 File execution Requirements.(12.3.1)]
+Verify that user-submitted filename metadata is not used directly with system
+or framework file and *URL* *API* to protect against path traversal.
+
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.3 File execution Requirements.(12.3.2)]
+Verify that user-submitted filename metadata is validated or ignored to prevent
+the disclosure, creation, updating or removal of local files (*LFI*).
+
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.3 File execution Requirements.(12.3.3)]
+Verify that user-submitted filename metadata is validated or ignored to prevent
+the disclosure or execution of remote files (*RFI*),
+which may also lead to *SSRF*.
+
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.3 File execution Requirements.(12.3.4)]
+Verify that the application protects against reflective file download (*RFD*)
+by validating or ignoring user-submitted filenames in a *JSON*, *JSONP*,
+or *URL* parameter,
+the response **Content-Type** header should be set to **text/plain**,
+and the **Content-Disposition** header should have a fixed filename.
+
+. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.3 File execution Requirements.(12.3.5)]
+Verify that untrusted file metadata is not used directly with system *API* or
+libraries, to protect against *OS* command injection.
