--- a/content/pages/rules/files/043/index.adoc
+++ b/content/pages/rules/files/043/index.adoc
@@ -1,20 +1,35 @@
 :slug: rules/043/
 :category: files
 :description: This requirement establishes the importance of defining explicit Content-Type and codification for all system files dynamically generated.
-:keywords: Requirement, Security, Content Type, Encoding, Files, Dynamic, Rules, Ethical Hacking, Pentesting
+:keywords: Content Type, Encoding, Files, Dynamic, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
-= R043. Define explicit content type
+= R043. Define a explicit content type
 
 == Requirement
 
 All system files generated dynamically
-must have a +Content-Type+ explicitly defined.
+must have a **Content-Type** explicitly defined.
 
 == References
 
-. [[r1]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[+OWASP-ASVS v3.1-5.21+]
-Verify that unstructured data is sanitized
-to enforce generic safety measures such as allowed characters and length,
-and characters potentially harmful in given context should be escaped
-(e.g. natural names with Unicode or apostrophes, such as ねこ or O'Hara).
+. [[r1]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
+The product does not validate or incorrectly validates input that can affect
+the control flow or data flow of a program.
+
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.3 Output encoding and Injection Prevention Requirements.(5.3.1)]
+Verify that output encoding is relevant for the interpreter and context
+required.
+For example, use encoders specifically for *HTML* values, *HTML* attributes,
+JavaScript, URL Parameters, *HTTP* headers, *SMTP*, and others as the context
+requires, especially from untrusted inputs
+(e.g. names with Unicode or apostrophes, such as ねこ or O'Hara).
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.3 File execution Requirements.(12.3.4)]
+Verify that the application protects against reflective file download (*RFD*)
+by validating or ignoring user-submitted filenames in a *JSON*, *JSONP*,
+or *URL* parameter,
+the response **Content-Type** header should be set to **text/plain**,
+and the **Content-Disposition** header should have a fixed filename.
