--- a/content/pages/rules/architecture/050/index.adoc
+++ b/content/pages/rules/architecture/050/index.adoc
@@ -8,41 +8,50 @@
 
 == Requirement
 
-Interpreted code (*Javascript*, *CSS*) must be loaded from domains controlled
-by the organization.
+Interpreted code (e.g. *Javascript*, *CSS*) must be loaded from domains
+controlled by the organization.
 
 == Description
 
 Applications often use resources or have dependencies that are hosted on
-servers other than the one in which they reside.
+other servers.
 These resources should be hosted on domains controlled by the organization
 in order to prevent several types of injection attacks.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/830.html[CWE-830: Inclusion of Web Functionality from an Untrusted Source].
+. [[r1]] link:https://cwe.mitre.org/data/definitions/829.html[CWE-829: Inclusion of Functionality from Untrusted Control Sphere].
+The software imports, requires, or includes executable functionality
+(such as a library) from a source that is outside of the intended control
+sphere.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/830.html[CWE-830: Inclusion of Web Functionality from an Untrusted Source].
 The software includes web functionality (such as a web widget) from another
 domain,
-which causes it to operate within the domain of the software,
 potentially granting total access and control of the software to the untrusted
 source.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.6)]
 Verify that the application projects against *JavaScript* or *JSON* injection
 attacks,
 including for eval attacks, remote *JavaScript* includes, *CSP* bypasses,
 **DOM XSS**, and *JavaScript* expression evaluation.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.3 Deployed Application Integrity Controls.(10.3.2)]
-Verify that the application employs integrity protections,
-such as code signing or sub-resource integrity.
 The application must not load or execute code from untrusted sources,
 such as loading includes, modules, plugins, code, or libraries from untrusted
 sources or the Internet.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.3 Deployed Application Integrity Controls.(10.3.3)]
 Verify that the application has protection from sub-domain takeovers if the
 application relies upon *DNS* entries or *DNS* sub-domains.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.3 File execution Requirements.(12.3.6)]
+Verify that the application does not include and execute functionality from
+untrusted sources,
+such as unverified content distribution networks, *JavaScript* libraries,
+or **node npm** libraries.
