refac(doc): #3505 drills-fix-integrates
- All "Fixes" were replaced by "Integrates" in Drills paragraphs.


Former-commit-id: 97322456ce234a11a243ef63b72c54084ae23c09

--- a/new/content/pages/products/drills/index.adoc
+++ b/new/content/pages/products/drills/index.adoc
@@ -13,15 +13,17 @@ You are able to decide which security requirements will be tested on each
 ethical hacking (profiling). You will know the exact severity for each hacking
 (for inspected and uninspected profiled requirements). Basic service allows you
 to choose a single environment from production, testing or integration. You can
-also add additional testing environments for validation at an additional charge.
+also add additional testing environments
+for validation at an additional charge.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
 == Vulnerabilities Management Platform
 
 [role="fw1 f-key-features lh-key-features"]
-Security analysts report findings in Fixes, the communication, monitoring and
-reporting platform for projects. You can use it to access general information
-about each finding, check its remediation status, classify it according to age,
+Security analysts report findings in Integrates, the communication, monitoring
+and reporting platform for projects.
+You can use it to access general information about each finding,
+check its remediation status, classify it according to age,
 visualize real-time project statistics and progress, as well as other
 functionalities.
 
@@ -29,21 +31,25 @@ functionalities.
 == Remediation
 
 [role="fw1 f-key-features lh-key-features"]
-Multiple finding validation cycles are performed during the subscription period.
-You can check if any findings have been successfully closed as many times as you
-require. In order to perform this remediation validation, you must first define
+Multiple finding validation cycles are performed
+during the subscription period.
+You can check if any findings have been successfully closed
+as many times as you require.
+In order to perform this remediation validation, you must first define
 the treatment used to remediate the vulnerability and then request,
-through Fixes, a finding validation. You can request clarification on any issue
-by directly contacting Fluid Attacks’ hackers also through Fixes.
+through Integrates, a finding validation.
+You can request clarification on any issue
+by directly contacting Fluid Attacks' hackers also through Integrates.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
 == Healthcheck
 
 [role="fw1 f-key-features lh-key-features"]
 All versions of existing code should be attacked up to the subscription start
-point, in addition to the monthly test limit. A healthcheck is intended to catch
-up with the development team within the first *3* months of subscription. Then
-the continuous hacking advances simultaneously with the development.
+point, in addition to the monthly test limit.
+A healthcheck is intended to catch
+up with the development team within the first *3* months of subscription.
+Then the continuous hacking advances simultaneously with the development.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
 == Critical Information Extraction and Information Removal
