refac(doc): #3508 aboutus-update-text
- The subtitle in About Us section was replaced by a paragraph.


Former-commit-id: a8ba7a0cc4c0db8cf6eaaceee47dcfb951f2f4b3

--- a/content/pages/about-us/index.adoc
+++ b/content/pages/about-us/index.adoc
@@ -4,7 +4,10 @@
 
 = About Us
 
-=== Fluid Attacks is growing every day!
+`Fluid Attacks` specializes in red team operations and technology development
+that supports the hacking of its clients' systems.
+`Fluid Attacks` provides speed, precision, and scalability to hacking projects
+that identify all vulnerabilities in systems.
 
 Since *2001*, `Fluid Attacks` has been developing technology
 focused on cybersecurity.
