refac(doc): #3507 hacking-remove-text
- Phrases were removed for Drills, One-shot, and Continuous sections.


Former-commit-id: 8f4f1573fd4020d76c421fd5f38ea902fc4f1d0b

--- a/new/content/pages/products/drills/index.adoc
+++ b/new/content/pages/products/drills/index.adoc
@@ -6,15 +6,12 @@
 = Drills
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
-== Severity and Testing Environments
+== Severity of Tested Requirements
 
 [role="fw1 f-key-features lh-key-features"]
 You are able to decide which security requirements will be tested on each
 ethical hacking (profiling). You will know the exact severity for each hacking
-(for inspected and uninspected profiled requirements). Basic service allows you
-to choose a single environment from production, testing or integration. You can
-also add additional testing environments
-for validation at an additional charge.
+(for inspected and uninspected profiled requirements).
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
 == Vulnerabilities Management Platform
