--- a/new/content/pages/use-cases/continuous-hacking/environments/index.adoc
+++ b/new/content/pages/use-cases/continuous-hacking/environments/index.adoc
@@ -6,10 +6,8 @@
 :section: Continuous Hacking
 :template: use-cases/feature
 
-= Severity and Testing Environments
+= Severity of Tested Requirements
 
 You can decide through link:../../../rules/[*Rules*] which security requirements will be tested.
 You can know the exact severity of each hacking
 (for inspected and uninspected profiled requirements).
-Basic service allows you to choose a single production, testing, or integration
-environment. You can also add another one for validation at an extra charge.
