--- a/new/content/pages/use-cases/one-shot-hacking/environments/index.adoc
+++ b/new/content/pages/use-cases/one-shot-hacking/environments/index.adoc
@@ -6,12 +6,9 @@
 :section: One-Shot Hacking
 :template: use-cases/feature
 
-= Severity and Testing Environments
+= Severity of Tested Requirements
 
 For every hacking process, you can be aware of its severity.
 Besides, you can choose all the security requirements to be tested
 that you consider necessary.
 Each requirement can be found and understood using link:../../../rules/[*Rules*].
-Likewise, the basic hacking service
-involves selecting an environment in which we would work.
-If you want to test another one, that will mean an additional cost.
