--- a/content/pages/rules/files/043/index.adoc
+++ b/content/pages/rules/files/043/index.adoc
@@ -33,3 +33,16 @@ by validating or ignoring user-submitted filenames in a *JSON*, *JSONP*,
 or *URL* parameter,
 the response **Content-Type** header should be set to **text/plain**,
 and the **Content-Disposition** header should have a fixed filename.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.5 File Download Requirements.(12.5.1)]
+Verify that the web tier is configured to serve only files with specific file
+extensions to prevent unintentional information and source code leakage.
+For example, backup files (e.g. *.bak*), temporary working files (e.g. *.swp*),
+compressed files (*.zip*, *.tar.gz*, etc.) and other extensions commonly used
+by editors should be blocked unless required.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.5 File Download Requirements.(12.5.2)]
+Verify that direct requests to uploaded files will never be executed as
+**HTML**/**JavaScript** content.
