--- a/content/pages/rules/authorization/035/index.adoc
+++ b/content/pages/rules/authorization/035/index.adoc
@@ -58,3 +58,8 @@ Verify that the principle of least privilege exists - users should only be able
 to access functions, data files, URLs, controllers, services, and other
 resources, for which they possess specific authorization.
 This implies protection against spoofing and elevation of privilege.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V13.1 Generic Web Service Security Verification Requirements.(13.1.2)]
+Verify that access to administration and management functions is limited to
+authorized administrators.
