--- a/content/pages/rules/files/043/index.adoc
+++ b/content/pages/rules/files/043/index.adoc
@@ -46,3 +46,10 @@ by editors should be blocked unless required.
 V12.5 File Download Requirements.(12.5.2)]
 Verify that direct requests to uploaded files will never be executed as
 **HTML**/**JavaScript** content.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V13.1 Generic Web Service Security Verification Requirements.(13.1.5)]
+Verify that requests containing unexpected or missing content types are
+rejected with appropriate headers
+(*HTTP* response status **406 Unacceptable** or
+**415 Unsupported Media Type**).
