--- a/content/pages/rules/session/032/index.adoc
+++ b/content/pages/rules/session/032/index.adoc
@@ -8,24 +8,24 @@
 
 == Requirement
 
-The system must not expose session IDs in URLs
+The system must not expose session **ID**s in **URL**s
 and messages presented to the user.
 
 == Description
 
-Session IDs are sensitive information that may allow an attacker to steal,
+Session **ID**s are sensitive information that may allow an attacker to steal,
 modify and/or destroy information once they get one.
 Information sent via URL parameters is:
 
 * stored in clear text in the browser history.
-* sent to external sites via the referrer HTTP header.
+* sent to external sites via the referrer *HTTP* header.
 * sent to external sites via the search bar if the browser interprets the
-URL as query.
+*URL* as query.
 * visible to scripts running on the browser that may belong to
 third-parties.
 
-Therefore, session IDs should neither be sent via URL parameters,
-nor displayed as messages presented to the user nor stored in logs.
+Therefore, session **ID**s should neither be sent via *URL* parameters,
+nor be displayed as messages presented to the user nor stored in logs.
 
 == Findings
 
@@ -44,12 +44,12 @@ The software transmits sensitive or security-critical data in cleartext in a
 communication channel that can be sniffed by unauthorized actors.
 
 . [[r3]] link:https://cwe.mitre.org/data/definitions/598.html[CWE-598: Use of GET Request Method With Sensitive Query Strings]
-The web application uses the HTTP GET method to process a request and includes
-sensitive information in the query string of that request.
+The web application uses the *HTTP* *GET* method to process a request and
+includes sensitive information in the query string of that request.
 
 . [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V3.1 Client-side Data Protection.(3.1.1)]
-Verify the application never reveals session tokens in URL parameters or error
+Verify the application never reveals session tokens in *URL* parameters or error
 messages.
 
 . [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
@@ -58,3 +58,8 @@ Verify that sensitive data is sent to the server in the *HTTP* message body or
 headers,
 and that query string parameters from any *HTTP* verb do not contain sensitive
 data.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V13.1 Generic Web Service Security Verification Requirements.(13.1.3)]
+Verify *API* **URL**s do not expose sensitive information,
+such as the *API* key, session tokens etc.
