feat(doc): #2994.218 create rule 348
- Created R348 for consistent encoding
- Added a Description
- Added CWE and ASVS references
- Fixed some minor typos in other rules


Former-commit-id: 25d968920bd4196fa3c8a3397fddc3300074a5fb

--- a/content/pages/rules/architecture/327/index.adoc
+++ b/content/pages/rules/architecture/327/index.adoc
@@ -4,7 +4,7 @@
 :keywords: Rate, Limit, Interaction, Frequency, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
-= R327. Set rate limit
+= R327. Set a rate limit
 
 == Requirement
 
