refac(doc): #3493 add button to access rules
Former-commit-id: 4b3fdfea35b7e7ff53532cbd0dfb2eb5e67e22a1

--- a/content/pages/products/rules/index.adoc
+++ b/content/pages/products/rules/index.adoc
@@ -22,8 +22,8 @@ They are the security demands that you agree to follow and comply with.
 In our hacking services, we determine if these are met or not.
 
 |====
-
-You can access the product [button]#link:../../rules/[here]#.
+[role="tc"]
+[button]#link:../../rules/[Access Rules, role="button-rules"]#
 
 == Standards
 
