feat(doc): #2994.219 add asvs refs to some rules
- Added ASVS references to R096, R176, R173, R029, R327, R263


Former-commit-id: e2d7aea33c728e11203da5747041496f7a8d3591

--- a/content/pages/rules/architecture/263/index.adoc
+++ b/content/pages/rules/architecture/263/index.adoc
@@ -70,3 +70,8 @@ file uploads or denial of service attacks.
 V11.1 Business Logic Security Requirements.(11.1.8)]
 Verify the application has configurable alerting when automated attacks or
 unusual activity is detected.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V13.2 RESTful Web Service Verification Requirements.(13.2.4)]
+Verify that REST services have anti-automation controls to protect against
+excessive calls, especially if the API is unauthenticated.
