--- a/content/pages/rules/architecture/327/index.adoc
+++ b/content/pages/rules/architecture/327/index.adoc
@@ -92,3 +92,8 @@ V12.1 File Upload Requirements.(12.1.3)]
 Verify that a file size quota and maximum number of files per user is enforced
 to ensure that a single user cannot fill up the storage with too many files,
 or excessively large files.
+
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V13.2 RESTful Web Service Verification Requirements.(13.2.4)]
+Verify that REST services have anti-automation controls to protect against
+excessive calls, especially if the API is unauthenticated.
